--- a/settings.yml
+++ b/settings.yml
@@ -1,1 +1,9 @@
-min_python_version: 3
+python:
+  version: 3
+
+git:
+  user:
+    name: reksarka
+    email: reksarka@gmail.com
+  core:
+    editor: vim
