--- a/config/hyprland.conf
+++ b/config/hyprland.conf
@@ -56,14 +56,17 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 5
-    gaps_out = 20
 
-    border_size = 2
+  # Gaps between windows.
+  gaps_in = 0
+  # Gaps between window and display border.
+  gaps_out = 0
 
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+  border_size = 2
+
+  # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
+  col.active_border = rgba(666666ff)
+  col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging
     # on borders and gaps
@@ -77,11 +80,13 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
 
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+  # Window border radius.
+  rounding = 0
+
+  # Change transparency of focused and unfocused windows.
+  active_opacity = 1.0
+  inactive_opacity = 0.85
 
     drop_shadow = true
     shadow_range = 4
