[NEW] uws set locale
Keyboard layout settings for:
  * Console
  * Hyprland

Current:
  * Layouts: EN, RU
  * Switch: Alt+Shift

--- a/config/hyprland.conf
+++ b/config/hyprland.conf
@@ -143,10 +143,11 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+  kb_layout = us,ru
+  kb_options = grp:alt_shift_toggle
+
     kb_variant =
     kb_model =
-    kb_options =
     kb_rules =
 
     follow_mouse = 1
@@ -180,7 +181,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exit,
 bind = $mainMod, B, exec, firefox
 bind = $mainMod, V, togglefloating,
