--- a/playbook/locale.yml
+++ b/playbook/locale.yml
@@ -2,106 +2,75 @@
 - name: locale
   hosts: all
 
-  vars:
-    # Use `locale -a` format.
-    locales:
-      - C
-      - C.utf8
-      - en_US.utf8
-      - ru_RU.utf8
-    system:
-      LANG: C.utf8
-      LC_MESSAGES: C.utf8
-
   tasks:
 
-    # Formats of `locale -a` and `/etc/locale.(conf|gen)` are differ.
-    # Usually there is no compatibility issues, but I prefer to follow the
-    # traditional naming conventions.
-    #
-    # If the `system.<LC>` is in the format of `locale -a`, it will be
-    # converted to the format of a config file:
-    # the ".uft<n>" suffix will be replaced with the ".UTF-<n>".
-  - name: ⚙ system
+  - include_vars: "{{ uws }}/config/uws.yml"
+
+  # Formats of `locale -a` and `/etc/locale.(conf|gen)` are differ.
+  # Usually there is no compatibility issues, but I prefer to follow the
+  # traditional naming conventions.
+  #
+  # If the `locales.system.<LC>` is in the format of `locale -a`, it will be
+  # converted to the format of a config file: the ".uft<n>" suffix will be
+  # replaced with the ".UTF-<n>".
+  - name: /!/*/ system default locales
     set_fact:
-      system: >
+      locale: >
         {{
-          system | combine(
-            {item.key: item.value | regex_replace('\.utf(\d+)$', '.UTF-\1')},
-            recursive=True
+          locale | combine(
+            {
+              'default': {
+                item.key: item.value | regex_replace('\.utf(\d+)$', '.UTF-\1'),
+              },
+            },
+            recursive=True,
           )
         }}
-    loop: "{{ system | dict2items }}"
-
+    loop: "{{ locale.default | dict2items }}"
     # And here we do reverse convertation to ensure the locale for the system
     # locale defaults will be generated before, using the required `locales`.
-  - name: ∎⚙ system
-    set_fact:
-      is_system_valid: >
-        {{
-          (
-            system
-            | dict2items
-            | map(attribute='value')
-            | map('regex_replace', '\.UTF-(\d+)$', '.utf\1')
-            | unique
-          ) is subset(locales)
-        }}
-  - fail:
-    when: not is_system_valid
+    failed_when: >
+      (
+        locale.default
+        | dict2items
+        | map(attribute='value')
+        | map('regex_replace', '\.UTF-(\d+)$', '.utf\1')
+        | unique
+      ) is subset(locale.list)
 
-  - name: ⍰ available locales
+  - name: /?/ available locales
     shell:
       cmd: "locale -a"
     register: available_locales
     changed_when: false
 
-  - name: ⛁ available locales
+  - name: /../ available locales
     set_fact:
       available_locales: "{{ available_locales.stdout_lines }}"
 
-  - name: ⌽ missing locales
+  - name: /%/ missing locales
     set_fact:
       missing_locales: >
         {{
           available_locales
-          | intersect(locales)
-          | symmetric_difference(locales)
+          | intersect(locale.list)
+          | symmetric_difference(locale.list)
         }}
 
-    # TODO: generate locales
-    #   Uncomment `/etc/locale.gen`
-    #   Run `locale-gen`
+    # TODO: Generate locales
+    # * Uncomment `/etc/locale.gen`
+    # * Run `locale-gen`
 
     # Editing the `/etc/locale.conf` directly instead of using the `localectl`
-    # is more general.
+    # is more general solution.
   - name: Set locale system defaults
     lineinfile:
       path: /etc/locale.conf
       regexp: "^\\s*({{ item.key }}=).*"
       line: "{{ item.key }}={{ item.value }}"
       validate: >
-        '{{ uws }}/validator/conf-uniq.sh'
-        '{{ item.key }}={{ item.value }}'
-        '%s'
-    loop: "{{ system | dict2items }}"
+        '{{ uws }}/util/validate/gc.sh' '%s' '{{ item.key }}={{ item.value }}'
+    loop: "{{ locale.default | dict2items }}"
     become: true
 
-  - name: ⍰ extra tasks
-    stat:
-      path: "{{ playbook_dir }}/locale/{{ item }}.yml"
-    register: stats
-    loop: "{{ locales }}"
-
-  - name: ⌽ existing extra tasks
-    set_fact:
-      extra_tasks: >
-        {{
-          stats.results
-          | selectattr('stat.exists', 'equalto', true)
-          | map(attribute='stat.path')
-        }}
-
-  - name: Extra locale config
-    include_tasks: "{{ item }}"
-    loop: "{{ extra_tasks }}"
+- import_playbook: "{{ playbook_dir }}/locale/keymap.yml"
