[UPD] uws set hyprland
* No monitor scaling for XWayland apps
* No border for a single window
* Mod+F - window fullscreen toggle
* Sound hotkeys 'wpctl' -> 'pactl'
* Install brightnessctl

--- a/config/hyprland.conf
+++ b/config/hyprland.conf
@@ -13,6 +13,12 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
+xwayland {
+  force_zero_scaling = true
+}
+
+env = GDK_SCALE,2
+
 
 ###################
 ### MY PROGRAMS ###
@@ -241,13 +247,15 @@ bind = $mainMod SHIFT, up, resizeactive, 0 -10
 bind = $mainMod SHIFT, down, resizeactive, 0 10
 
 
+bind = $mainMod, F, fullscreen
+
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume $(pactl get-default-sink) +5%
+bindel = ,XF86AudioLowerVolume, exec, pactl set-sink-volume $(pactl get-default-sink) -5%
+bindel = ,XF86AudioMute, exec, pactl set-sink-mute $(pactl get-default-sink) toggle
+#bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 2%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 2%-
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -263,3 +271,6 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+# No border for a single window.
+windowrulev2 = noborder, onworkspace:w[t1]
