--- a/playbook/main.yml
+++ b/playbook/main.yml
@@ -2,4 +2,5 @@
 - import_playbook: "{{ playbook_dir }}/locale.yml"
 - import_playbook: "{{ playbook_dir }}/font.yml"
 - import_playbook: "{{ playbook_dir }}/git.yml"
+- import_playbook: "{{ playbook_dir }}/vim.yml"
 - import_playbook: "{{ playbook_dir }}/hyprland.yml"
