[NEW] uws set app
Install a bunch of apps.

--- a/playbook/main.yml
+++ b/playbook/main.yml
@@ -1,3 +1,4 @@
+- import_playbook: "{{ playbook_dir }}/app.yml"
 - import_playbook: "{{ playbook_dir }}/fs.yml"
 - import_playbook: "{{ playbook_dir }}/locale.yml"
 - import_playbook: "{{ playbook_dir }}/font.yml"
