[NEW] uws set hyprland
Screenshots:
  * Ctrl+S to make a full screenshot
  * Ctrl+Shift+S to select a screenshot area
  * `eog` as img viever

--- a/config/hyprland.conf
+++ b/config/hyprland.conf
@@ -187,8 +187,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = $mainMod, E, exit,
+bind = $mainMod, K, killactive,
+bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, B, exec, firefox
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
@@ -226,13 +226,12 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+#bind = $mainMod, S, togglespecialworkspace, magic
+#bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
-
 
 # Move/resize windows
 
@@ -246,8 +245,13 @@ bind = $mainMod SHIFT, left, resizeactive, -10 0
 bind = $mainMod SHIFT, up, resizeactive, 0 -10
 bind = $mainMod SHIFT, down, resizeactive, 0 10
 
-
 bind = $mainMod, F, fullscreen
+
+# Screenshot
+bind = $mainMod, S, exec, grim "$(xdg-user-dir PICTURES)/screen-$(date +%s).png"
+
+# Screenshot a selected region
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/screen-$(date +%s).png"
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume $(pactl get-default-sink) +5%
