--- a/playbook/wayland/app.yml
+++ b/playbook/wayland/app.yml
@@ -26,7 +26,7 @@
 
     vars:
       repo: https://github.com/jgmdev/wl-color-picker
-      dest: "{{ app }}/wl-color-picker"
+      dest: "{{ XDG_APP_DIR }}/wl-color-picker"
 
     block:
 
