[NEW] uws set locale
* Font setup for:
  - virtual console
  - foot
* `util/font/update` to update 'res/font':
  - terminus (PSF)
  - input (TTF)
* Fonts without updater:
  - SauceCodePro (TTF)
  - ZAP (PSF)

Default console font:
https://www.zap.org.au/projects/console-fonts-zap

--- a/config/foot.ini
+++ b/config/foot.ini
@@ -1,24 +1,30 @@
-# See foot.ini(5) man page
+# See `man foot.ini(5)`.
+
+[main]
+
+font=Input Mono:size=11
 
 [colors]
 
-foreground=EDEDED
-background=1D1B22
+alpha=1.0
 
-regular0=0E0D11  # black
-regular1=FB4934  # red
-regular2=B8BB26  # green
-regular3=F8B659  # yellow
-regular4=8DC3F1  # blue
-regular5=D3869B  # magenta
-regular6=8EC07C  # cyan
-regular7=FBF1C7  # white
+background=1d1b22
+foreground=ededed
+
+regular0=0e0d11  # black
+regular1=fb4934  # red
+regular2=b8bb26  # green
+regular3=f8b659  # yellow
+regular4=8dc3f1  # blue
+regular5=d3869b  # magenta
+regular6=8ec07c  # cyan
+regular7=fbf1c7  # white
 
 bright0=282828   # bright black
-bright1=CC241D   # bright red
-bright2=98971A   # bright green
-bright3=D79921   # bright yellow
+bright1=cc241d   # bright red
+bright2=98971a   # bright green
+bright3=d79921   # bright yellow
 bright4=458588   # bright blue
-bright5=B16286   # bright magenta
-bright6=689D6A   # bright cyan
-bright7=EDEDED   # bright white
+bright5=b16286   # bright magenta
+bright6=689d6a   # bright cyan
+bright7=ededed   # bright white
