--- a/playbook/app/tmux.yml
+++ b/playbook/app/tmux.yml
@@ -8,6 +8,7 @@
     package:
       name:
         - "tmux"
+        - "git"
     become: true
 
   # TODO: Ensure plugged in '.tmux.conf'
@@ -17,8 +18,46 @@
       dest: "{{ ansible_env.HOME }}/.tmux/plugins/tpm"
 
   - name: "/!/ .tmux.conf"
-    file:
-      path: "{{ ansible_env.HOME }}/.tmux.conf"
+    copy:
       src: "{{ uws }}/config/tmux.conf"
-      state: "link"
-      force: true
+      dest: "{{ ansible_env.HOME }}/.tmux.conf"
+    notify: "Reload tmux config"
+
+  - name: "tmux auto config"
+
+    vars:
+      auto_name: ".tmux.auto.conf"
+      auto_path: "{{ ansible_env.HOME }}/{{ auto_name }}"
+
+    block:
+
+    # TODO: Check that uncommented.
+    - name: "/?/ include tmux auto config"
+      shell:
+        cmd: "grep '{{ auto_name }}' {{ uws }}/config/tmux.conf"
+      register: grep
+      failed_when: false
+      changed_when: false
+
+    - name: "tmux auto config"
+      when: grep.rc == 0
+
+      block:
+
+      - name: "/!/ tmux auto config"
+        copy:
+          dest: "{{ auto_path }}"
+          content: ""
+          force: false
+
+      - name: "/!/ Auto config warning"
+        lineinfile:
+          path: "{{ auto_path }}"
+          line: "# Do not edit this automatically generated file!"
+          insertbefore: "BOF"
+
+  handlers:
+
+  - name: "Reload tmux config"
+    shell:
+      cmd: "tmux source {{ ansible_env.HOME }}/.tmux.conf"
