[NEW] uws set app/ranger
Installs the Ranger file manager.

Adds custom commands for `fzf` integration.

Binds Ctrl+F to search with fzf.

--- a/playbook/app.yml
+++ b/playbook/app.yml
@@ -49,5 +49,6 @@
     become: true
 
 - import_playbook: "{{ playbook_dir }}/app/mpv.yml"
+- import_playbook: "{{ playbook_dir }}/app/ranger.yml"
 - import_playbook: "{{ playbook_dir }}/app/tmux.yml"
 - import_playbook: "{{ playbook_dir }}/app/vim.yml"
