[TEST] ansible_collections
Plugin: local.uws.config_option

Test no changes when removing a not existing option.

--- a/lib/ansible_collections/local/uws/tests/integration/targets/config_option/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/tests/integration/targets/config_option/tasks/main.yml
@@ -1,1 +1,5 @@
-- import_tasks: "ll_remove.yml"
+# Remove all option entries from the config, excluding the commented lines.
+- import_tasks: "option_remove.yml"
+
+# Remove not existing option from the config.
+- import_tasks: "no_option_remove.yml"
