--- a/lib/ansible_collections/local/uws/tests/integration/targets/config_option/tasks/remove_no_option.yml
+++ b/lib/ansible_collections/local/uws/tests/integration/targets/config_option/tasks/remove_no_option.yml
@@ -2,22 +2,7 @@
 # the commented `PS1` option, so there is nothing to remove and the config
 # should be not changed during this test.
 
-- set_fact:
-    tests: "{{ playbook_dir | regex_search('.*?/tests') }}"
-
-- set_fact:
-    module_tests: "{{ tests }}/integration/targets/config_option"
-
-- set_fact:
-    source_config: "{{ module_tests }}/res/bashrc"
-    test_config: "{{ playbook_dir }}/bashrc"
-
-- name: "Copy the test config to modify it during tests"
-  copy:
-    src: "{{ source_config }}"
-    dest: "{{ test_config }}"
-    force: true
-
+- import_tasks: "prepare_test_config.yml"
 
 - name: "Remove PS1 option"
   local.uws.config_option:
