--- a/playbook/app.yml
+++ b/playbook/app.yml
@@ -22,6 +22,13 @@
         - transmission-gtk
     become: true
 
+  # TODO: Check if GUI installed.
+  - name: "/!/ Utility packages with GUI"
+    package:
+      name:
+        - veracrypt
+        - keepass
+
   - name: "/!/ Dev packages"
     package:
       name:
