--- a/playbook/wayland/app.yml
+++ b/playbook/wayland/app.yml
@@ -1,4 +1,4 @@
-- name: Common Wayland packages
+- name: "Common Wayland packages"
   package:
     name:
       - xdg-user-dirs
@@ -53,26 +53,24 @@
         target: install
       become: true
 
-- name: /!/ foot
+- name: "/!/ foot terminal"
 
   vars:
     config_dir: "{{ XDG_CONFIG_HOME }}/foot"
 
   block:
 
-  - name: /!/ `foot` terminal package
+  - name: "/!/ foot terminal package"
     package:
-      name: foot
+      name: "foot"
     become: true
 
-  - name: "/!/ {{ config_dir }}"
+  - name: "/!/ foot config dir"
     file:
       path: "{{ config_dir }}"
-      state: directory
+      state: "directory"
 
   - name: "/!/ {{ config_dir }}/foot.ini"
-    file:
+    copy:
       src: "{{ uws }}/config/foot.ini"
-      path: "{{ config_dir }}/foot.ini"
-      state: link
-      force: true
+      dest: "{{ config_dir }}/foot.ini"
