[NEW] uws set roles/<role>
Can set an arbitrary role.

Examples:

  Set the local role from the `playbook/roles/<role>`

    `uws set roles/<role>`

  Set the role from the Ansible collection

    `uws set roles/local.uws.system`

--- a/playbook/main.yml
+++ b/playbook/main.yml
@@ -1,4 +1,11 @@
-- import_playbook: "{{ playbook_dir }}/app.yml"
+---
+- name: "Default uws tasks"
+  hosts: "all"
+  roles:
+    - "local.uws.system"
+    - "local.uws.workstation"
+
+# TODO: Refactoring
 - import_playbook: "{{ playbook_dir }}/fs.yml"
 - import_playbook: "{{ playbook_dir }}/locale.yml"
 - import_playbook: "{{ playbook_dir }}/git.yml"
