[NEW] uws set roles/local.uws.*
roles/system - configures battery util.

roles/workstation - configures tmux.

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,4 +1,4 @@
-# Key bindings {{{
+# -- Key bindings {{{
 
 # Rebind prefix: Ctrl+B -> Alt+P
 unbind C-b
@@ -37,7 +37,7 @@ bind-key -n M-e next-window
 bind-key -n M-[ select-pane -t -1
 bind-key -n M-] select-pane -t +1
 
-# Key bindings }}}
+# -- Key bindings }}}
 
 
 set -g default-terminal "tmux-256color"
@@ -47,7 +47,7 @@ set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",foot*:Tc"
 
 
-# Status line {{{
+# -- Status line {{{
 
 set -g status-interval 15  # seconds
 
@@ -57,7 +57,8 @@ set-option -g status-style fg=color15,bg=color241
 set-option -g mode-style fg=color15,bg=color241
 set-option -g message-style fg=black,bg=color109,bold
 
-# -- Status middle {{{
+
+# -- -- Status middle {{{
 
 # Non-active windows.
 set-option -g window-status-format "\
@@ -74,24 +75,22 @@ set-window-option -g window-status-current-format "\
 # Non-current window with an acivity.
 set-window-option -g window-status-activity-style "bg=color152"
 
-# -- Status middle }}}
+# -- -- Status middle }}}
+
 
 set-option -g status-left "\
 #[fg=color15, bg=color241]#{?client_prefix,#[bg=colour167],} #S "
 
-set-option -g status-right "\
-#(echo TODO:bat) \
-| TODO:lang | \
-%a %b/%d %H:%M "
+set-option -g status-right " <<battery>><<language>>%a %b/%d %H:%M "
 
 # Start index for windows and panes is 1, not 0.
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Status line }}}
+# -- Status line }}}
 
 
-# Plugins {{{
+# -- Plugins {{{
 
 set -g @plugin "tmux-plugins/tmux-resurrect"
 
@@ -103,6 +102,4 @@ set -g @plugin "tmux-plugins/tpm"
 
 run "~/.tmux/plugins/tpm/tpm"
 
-# Plugins }}}
-
-source-file ~/.tmux.auto.conf
+# -- Plugins }}}
