--- a/playbook/role.yml
+++ b/playbook/role.yml
@@ -1,6 +1,8 @@
 ---
 - name: "Arbitrary `uws set roles/<role>`"
   hosts: "all"
+  vars_files:
+    - "{{ uws }}/config/uws.yml"
   tasks:
     - import_role:
         name: "{{ role }}"
